crates/vox-codegen/tests/snapshots/golden_corpus_ts_smoke_test__golden_corpus_ts_emit_no_panic@config_deploy.snap
---
source: crates/vox-codegen/tests/golden_corpus_ts_smoke_test.rs
expression: combined
---
=== types.ts ===
export type DatabaseConfig =
  | { readonly _tag: "DatabaseConfig"; readonly url: string; readonly pool_size: number };

export const DatabaseConfig = (url: string, pool_size: number): DatabaseConfig => ({ _tag: "DatabaseConfig", url, pool_size });



=== vox-app-contract.json ===
{
  "schema_version": 2,
  "http_routes": [],
  "server_fns": [],
  "query_fns": [],
  "mutation_fns": [],
  "mcp_tools": [],
  "mcp_resources": [],
  "server_config": {
    "bind_host": "127.0.0.1",
    "default_port": 3000,
    "port_env_var": "VOX_PORT",
    "dev_proxy_env_var": "VOX_SSR_DEV_URL",
    "static_assets_embed_dir": "public/"
  }
}

=== vox-tanstack-query.tsx ===
/**
 * TanStack Query helpers — generated by Vox (`vox-compiler`).
 * Wrap async data (e.g. `vox-client` / `fetch`) with `useVoxServerQuery`.
 */
import { QueryClient, QueryClientProvider, useQuery } from "@tanstack/react-query";
import type { ReactElement, ReactNode } from "react";

export const voxQueryClient = new QueryClient({
  defaultOptions: {
    queries: { staleTime: 30_000 },
  },
});

export function VoxQueryProvider({
  children,
}: Readonly<{ children: ReactNode }>): ReactElement {
  return <QueryClientProvider client={voxQueryClient}>{children}</QueryClientProvider>;
}

/** Narrow mapping: stable `queryKey` + promise `queryFn` (pairs with generated server fns). */
export function useVoxServerQuery<TData>(
  queryKey: readonly unknown[],
  queryFn: () => Promise<TData>,
) {
  return useQuery<TData>({ queryKey, queryFn });
}


=== schemas.ts ===
import { z } from "zod";

export const DatabaseConfigSchema = z.object({
  _tag: z.literal("DatabaseConfig"),
  url: z.string(),
  pool_size: z.number(),
});



=== openapi.json ===
{
  "openapi": "3.1.0",
  "info": {
    "title": "vox-app",
    "version": "0.1.0",
    "description": "Generated from Vox source. Conforms to wire-format-v1.\n\nQuery (`GET`) parameters: each query value is JSON text after URI decoding — see wire-format-v1 SSOT §2.1. The `schema` on each parameter describes the logical type after `JSON.parse`; it is not the raw query-string token shape."
  },
  "servers": [
    {
      "url": ""
    }
  ],
  "paths": {},
  "components": {
    "schemas": {
      "DatabaseConfig": {
        "oneOf": [
          {
            "type": "object",
            "properties": {
              "_tag": {
                "type": "string",
                "const": "DatabaseConfig"
              },
              "url": {
                "type": "string"
              },
              "pool_size": {
                "type": "number"
              }
            },
            "required": [
              "_tag",
              "url",
              "pool_size"
            ]
          }
        ],
        "discriminator": {
          "propertyName": "_tag"
        }
      },
      "ErrorEnvelope": {
        "type": "object",
        "description": "Wire-format v1 error body (SSOT §6). Returned for 4xx/5xx endpoint failures.",
        "required": [
          "ok",
          "code",
          "message"
        ],
        "properties": {
          "ok": {
            "type": "boolean",
            "const": false
          },
          "code": {
            "type": "string",
            "description": "Stable SCREAMING_SNAKE_CASE machine code"
          },
          "message": {
            "type": "string"
          },
          "request_id": {
            "type": "string",
            "description": "Optional trace / request correlation id"
          },
          "details": {
            "description": "Optional structured payload; shape is code-specific"
          }
        }
      }
    }
  }
}
